--- a/.github/workflows/sync-from.yml
+++ b/.github/workflows/sync-from.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Sync from
 
 # Controls when the action will run. 
 on:
@@ -26,7 +26,9 @@ jobs:
       - uses: actions/checkout@v2
         with: 
               ref: script-sync-from
-              path: .scripts
+              path: scripts     
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
       - uses: actions/checkout@v2
         with: 
               ref: registry
@@ -40,13 +42,13 @@ jobs:
 
       - name: install
         run: |
-          cd .scripts
+          cd scripts
           yarn
           cd ..
       # Runs a set of commands using the runners shell
       - name: sync registry
         run: |
-          node .scripts/sync.js
+          node scripts/sync.js
           
       - name: commit changes
         run: |
