--- a/.github/workflows/sync-from.yml
+++ b/.github/workflows/sync-from.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -26,7 +26,9 @@ jobs:
       - uses: actions/checkout@v2
         with: 
               ref: script-sync-from
-              path: scripts     
+              path: scripts   
+      - name: debug print
+        run: dir /s .
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.5
       - uses: actions/checkout@v2
