--- a/.github/workflows/sync-from.yml
+++ b/.github/workflows/sync-from.yml
@@ -44,13 +44,13 @@ jobs:
 
       - name: install
         run: |
-          cd scripts
+          cd .\scripts
           yarn
           cd ..
       # Runs a set of commands using the runners shell
       - name: sync registry
         run: |
-          node scripts/sync.js
+          node ./scripts/sync.js
           
       - name: commit changes
         run: |
