--- a/.github/workflows/sync-from.yml
+++ b/.github/workflows/sync-from.yml
@@ -25,8 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with: 
-              ref: script-sync-from
-              path: scripts   
+              ref: script-sync-from  
       - name: debug print
         run: dir .
       - name: Setup Node.js environment
@@ -34,7 +33,7 @@ jobs:
       - uses: actions/checkout@v2
         with: 
               ref: registry
-              path: .
+              path: .\mirrors
 
         # 缓存yarn
       - uses: actions/cache@v2
@@ -49,17 +48,9 @@ jobs:
           cd ..
       # Runs a set of commands using the runners shell
       - name: sync registry
-        run: |
-          node ./scripts/sync.js
-          
-      - name: commit changes
-        run: |
-          git config --local user.email "bot@edgeless.top"
-          git config --local user.name "SyncBot"
-          git commit -m "Sync from source" -a
-          
-      - uses: actions-go/push@v1
-        with:  
-              force: true
-              ref: registry
-              token: ${{ secrets.GITHUB_TOKEN }}
+        run: .\setup.bat
+      - uses: ad-m/github-push-action@v0.6.0
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            branch: registry
+            directory: .\mirrors
