--- a/.github/workflows/sync-from.yml
+++ b/.github/workflows/sync-from.yml
@@ -34,6 +34,8 @@ jobs:
         with: 
               ref: registry
               path: .\mirrors
+      - name: install
+        run: yarn
 
         # 缓存yarn
       - name: sync registry
